tests-snapshots/dbc-cantools/issue_184_extended_mux_independent_multiplexors_dumped.snap.stderr
error[E0412]: cannot find type `ExtMuxIndepMultiplexorsMuxAIndex` in this scope
   --> tests-snapshots/dbc-cantools/issue_184_extended_mux_independent_multiplexors_dumped.snap.rs:186:39
    |
186 |     pub fn mux_a(&mut self) -> Result<ExtMuxIndepMultiplexorsMuxAIndex, CanError> {
    |                                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
300 | pub enum ExtMuxIndepMultiplexorsMuxBIndex {
    | ----------------------------------------- similarly named enum `ExtMuxIndepMultiplexorsMuxBIndex` defined here
    |
help: an enum with a similar name exists
    |
186 -     pub fn mux_a(&mut self) -> Result<ExtMuxIndepMultiplexorsMuxAIndex, CanError> {
186 +     pub fn mux_a(&mut self) -> Result<ExtMuxIndepMultiplexorsMuxBIndex, CanError> {
    |
help: you might be missing a type parameter
    |
 69 | impl<ExtMuxIndepMultiplexorsMuxAIndex> ExtMuxIndepMultiplexors {
    |     ++++++++++++++++++++++++++++++++++

error[E0422]: cannot find struct, variant or union type `ExtMuxIndepMultiplexorsMuxAM0` in this scope
   --> tests-snapshots/dbc-cantools/issue_184_extended_mux_independent_multiplexors_dumped.snap.rs:188:58
    |
188 |             0 => Ok(ExtMuxIndepMultiplexorsMuxAIndex::M0(ExtMuxIndepMultiplexorsMuxAM0{ raw: self.raw })),
    |                                                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ help: a struct with a similar name exists: `ExtMuxIndepMultiplexorsMuxBM0`
...
316 | pub struct ExtMuxIndepMultiplexorsMuxBM0 { raw: [u8; 8] }
    | ---------------------------------------- similarly named struct `ExtMuxIndepMultiplexorsMuxBM0` defined here

error[E0422]: cannot find struct, variant or union type `ExtMuxIndepMultiplexorsMuxAM1` in this scope
   --> tests-snapshots/dbc-cantools/issue_184_extended_mux_independent_multiplexors_dumped.snap.rs:189:58
    |
189 |             1 => Ok(ExtMuxIndepMultiplexorsMuxAIndex::M1(ExtMuxIndepMultiplexorsMuxAM1{ raw: self.raw })),
    |                                                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ help: a struct with a similar name exists: `ExtMuxIndepMultiplexorsMuxBM1`
...
385 | pub struct ExtMuxIndepMultiplexorsMuxBM1 { raw: [u8; 8] }
    | ---------------------------------------- similarly named struct `ExtMuxIndepMultiplexorsMuxBM1` defined here

error[E0422]: cannot find struct, variant or union type `ExtMuxIndepMultiplexorsMuxAM2` in this scope
   --> tests-snapshots/dbc-cantools/issue_184_extended_mux_independent_multiplexors_dumped.snap.rs:190:58
    |
190 |             2 => Ok(ExtMuxIndepMultiplexorsMuxAIndex::M2(ExtMuxIndepMultiplexorsMuxAM2{ raw: self.raw })),
    |                                                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ help: a struct with a similar name exists: `ExtMuxIndepMultiplexorsMuxBM2`
...
498 | pub struct ExtMuxIndepMultiplexorsMuxBM2 { raw: [u8; 8] }
    | ---------------------------------------- similarly named struct `ExtMuxIndepMultiplexorsMuxBM2` defined here

error[E0412]: cannot find type `ExtMuxIndepMultiplexorsMuxAM0` in this scope
   --> tests-snapshots/dbc-cantools/issue_184_extended_mux_independent_multiplexors_dumped.snap.rs:212:37
    |
212 |     pub fn set_m0(&mut self, value: ExtMuxIndepMultiplexorsMuxAM0) -> Result<(), CanError> {
    |                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ help: a struct with a similar name exists: `ExtMuxIndepMultiplexorsMuxBM0`
...
316 | pub struct ExtMuxIndepMultiplexorsMuxBM0 { raw: [u8; 8] }
    | ---------------------------------------- similarly named struct `ExtMuxIndepMultiplexorsMuxBM0` defined here

error[E0412]: cannot find type `ExtMuxIndepMultiplexorsMuxAM1` in this scope
   --> tests-snapshots/dbc-cantools/issue_184_extended_mux_independent_multiplexors_dumped.snap.rs:222:37
    |
222 |     pub fn set_m1(&mut self, value: ExtMuxIndepMultiplexorsMuxAM1) -> Result<(), CanError> {
    |                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ help: a struct with a similar name exists: `ExtMuxIndepMultiplexorsMuxBM1`
...
385 | pub struct ExtMuxIndepMultiplexorsMuxBM1 { raw: [u8; 8] }
    | ---------------------------------------- similarly named struct `ExtMuxIndepMultiplexorsMuxBM1` defined here

error[E0412]: cannot find type `ExtMuxIndepMultiplexorsMuxAM2` in this scope
   --> tests-snapshots/dbc-cantools/issue_184_extended_mux_independent_multiplexors_dumped.snap.rs:232:37
    |
232 |     pub fn set_m2(&mut self, value: ExtMuxIndepMultiplexorsMuxAM2) -> Result<(), CanError> {
    |                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ help: a struct with a similar name exists: `ExtMuxIndepMultiplexorsMuxBM2`
...
498 | pub struct ExtMuxIndepMultiplexorsMuxBM2 { raw: [u8; 8] }
    | ---------------------------------------- similarly named struct `ExtMuxIndepMultiplexorsMuxBM2` defined here

error[E0592]: duplicate definitions with name `set_m0`
   --> tests-snapshots/dbc-cantools/issue_184_extended_mux_independent_multiplexors_dumped.snap.rs:212:5
    |
141 |     pub fn set_m0(&mut self, value: ExtMuxIndepMultiplexorsMuxBM0) -> Result<(), CanError> {
    |     -------------------------------------------------------------------------------------- other definition for `set_m0`
...
212 |     pub fn set_m0(&mut self, value: ExtMuxIndepMultiplexorsMuxAM0) -> Result<(), CanError> {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ duplicate definitions for `set_m0`

error[E0592]: duplicate definitions with name `set_m1`
   --> tests-snapshots/dbc-cantools/issue_184_extended_mux_independent_multiplexors_dumped.snap.rs:222:5
    |
151 |     pub fn set_m1(&mut self, value: ExtMuxIndepMultiplexorsMuxBM1) -> Result<(), CanError> {
    |     -------------------------------------------------------------------------------------- other definition for `set_m1`
...
222 |     pub fn set_m1(&mut self, value: ExtMuxIndepMultiplexorsMuxAM1) -> Result<(), CanError> {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ duplicate definitions for `set_m1`

error[E0592]: duplicate definitions with name `set_m2`
   --> tests-snapshots/dbc-cantools/issue_184_extended_mux_independent_multiplexors_dumped.snap.rs:232:5
    |
161 |     pub fn set_m2(&mut self, value: ExtMuxIndepMultiplexorsMuxBM2) -> Result<(), CanError> {
    |     -------------------------------------------------------------------------------------- other definition for `set_m2`
...
232 |     pub fn set_m2(&mut self, value: ExtMuxIndepMultiplexorsMuxAM2) -> Result<(), CanError> {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ duplicate definitions for `set_m2`

error[E0277]: the trait bound `u16: From<i8>` is not satisfied
   --> tests-snapshots/dbc-cantools/issue_184_extended_mux_independent_multiplexors_dumped.snap.rs:120:137
    |
120 | ...s::MESSAGE_ID, multiplexor: multiplexor.into() }),
    |                                            ^^^^ the trait `From<i8>` is not implemented for `u16`
    |
    = help: the following other types implement trait `From<T>`:
              `u16` implements `From<Char>`
              `u16` implements `From<bool>`
              `u16` implements `From<u8>`
    = note: required for `i8` to implement `Into<u16>`

error[E0433]: failed to resolve: use of undeclared type `ExtMuxIndepMultiplexorsMuxAIndex`
   --> tests-snapshots/dbc-cantools/issue_184_extended_mux_independent_multiplexors_dumped.snap.rs:188:21
    |
188 |             0 => Ok(ExtMuxIndepMultiplexorsMuxAIndex::M0(ExtMuxIndepMultiplexorsMuxAM0{ raw: self.raw })),
    |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    |                     |
    |                     use of undeclared type `ExtMuxIndepMultiplexorsMuxAIndex`
    |                     help: an enum with a similar name exists: `ExtMuxIndepMultiplexorsMuxBIndex`

error[E0433]: failed to resolve: use of undeclared type `ExtMuxIndepMultiplexorsMuxAIndex`
   --> tests-snapshots/dbc-cantools/issue_184_extended_mux_independent_multiplexors_dumped.snap.rs:189:21
    |
189 |             1 => Ok(ExtMuxIndepMultiplexorsMuxAIndex::M1(ExtMuxIndepMultiplexorsMuxAM1{ raw: self.raw })),
    |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    |                     |
    |                     use of undeclared type `ExtMuxIndepMultiplexorsMuxAIndex`
    |                     help: an enum with a similar name exists: `ExtMuxIndepMultiplexorsMuxBIndex`

error[E0433]: failed to resolve: use of undeclared type `ExtMuxIndepMultiplexorsMuxAIndex`
   --> tests-snapshots/dbc-cantools/issue_184_extended_mux_independent_multiplexors_dumped.snap.rs:190:21
    |
190 |             2 => Ok(ExtMuxIndepMultiplexorsMuxAIndex::M2(ExtMuxIndepMultiplexorsMuxAM2{ raw: self.raw })),
    |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    |                     |
    |                     use of undeclared type `ExtMuxIndepMultiplexorsMuxAIndex`
    |                     help: an enum with a similar name exists: `ExtMuxIndepMultiplexorsMuxBIndex`

error[E0277]: the trait bound `u16: From<i8>` is not satisfied
   --> tests-snapshots/dbc-cantools/issue_184_extended_mux_independent_multiplexors_dumped.snap.rs:191:137
    |
191 | ...s::MESSAGE_ID, multiplexor: multiplexor.into() }),
    |                                            ^^^^ the trait `From<i8>` is not implemented for `u16`
    |
    = help: the following other types implement trait `From<T>`:
              `u16` implements `From<Char>`
              `u16` implements `From<bool>`
              `u16` implements `From<u8>`
    = note: required for `i8` to implement `Into<u16>`
